Scheduler updated queries for remote gremlin
Signed-off-by: Dimitrios (D.) Maimaris <dimitrios.maimaris@ing.com>